src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Branch_Times__c</fullName>
        <description>Branches  Times of Accounts</description>
        <inlineHelpText>Branches  Times of Accounts</inlineHelpText>
        <label>Branch Times</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <description>Branches of Accounts</description>
        <inlineHelpText>Branches of Accounts</inlineHelpText>
        <label>Branch</label>
        <picklist>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manchester CD office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moorgate HO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moorgate HO - 3111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain - ES1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain - ES2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain - ES3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain - ES4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain - Head Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain - Mallorca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TorFX - Penzance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MasterId__c</fullName>
        <externalId>true</externalId>
        <label>MasterId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mercantile_Bank_Account__c</fullName>
        <externalId>true</externalId>
        <label>Mercantile Bank Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiPicklistOnCheckBox__c</fullName>
        <label>MultiPicklistOnCheckBox</label>
        <picklist>
            <picklistValues>
                <fullName>Value1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value7</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SF_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TestPick1__c</fullName>
        <label>TestPick1</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TestPick2__c</fullName>
        <label>TestPick2</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TestPick3__c</fullName>
        <label>TestPick3</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>birthdate__c</fullName>
        <description>birthdate</description>
        <inlineHelpText>birthdate</inlineHelpText>
        <label>birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>displayMultiPicklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>displayMultiPicklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <description>email</description>
        <inlineHelpText>email</inlineHelpText>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>firstname__c</fullName>
        <label>firstname</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastname__c</fullName>
        <label>lastname</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noofcontact__c</fullName>
        <label>noofcontact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>updateDateWorkflowOptimization224CDTor__c</fullName>
        <description>updateDateWorkflowOptimization224CDTor</description>
        <inlineHelpText>updateDateWorkflowOptimization224CDTor</inlineHelpText>
        <label>updateDateWorkflowOptimization224CDTor</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>